added refreshToken endpoint and update some meppers and validators
